[gd_scene load_steps=5 format=3 uid="uid://b2hddm7sgmp18"]

[ext_resource type="Script" uid="uid://cti53snwxovxi" path="res://Scripts/cäsars_big_brother.gd" id="1_3q7tp"]
[ext_resource type="Texture2D" uid="uid://dajh57clpktxi" path="res://Assets/Caesar_teil2.png" id="2_irj1d"]
[ext_resource type="PackedScene" uid="uid://djwgirmrlf867" path="res://Scenes/keyword.tscn" id="4_6int8"]
[ext_resource type="PackedScene" uid="uid://y3iiaavqo3c8" path="res://Scenes/scene_switcher_button.tscn" id="4_u5whh"]

[node name="Cäsars_big_brother" type="Node2D"]
script = ExtResource("1_3q7tp")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 40.0

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Cäsar_Scheibe" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(-300, 2)

[node name="Cäsar" type="Sprite2D" parent="Cäsar_Scheibe"]
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_irj1d")

[node name="InnerRing" type="Node2D" parent="Cäsar_Scheibe"]
unique_name_in_owner = true
position = Vector2(-4, -12)
rotation = 0.122173

[node name="Area2D" type="Area2D" parent="Cäsar_Scheibe"]
unique_name_in_owner = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Cäsar_Scheibe/Area2D"]
unique_name_in_owner = true
polygon = PackedVector2Array(106, -1, 129, -1, 128, 16, 125, 30, 103, 24, 105, 12)

[node name="VerschlüsselterText" type="Label" parent="."]
unique_name_in_owner = true
offset_top = -56.0
offset_right = 466.0
offset_bottom = -22.0
theme_type_variation = &"HeaderMedium"

[node name="CheckSolution" type="Button" parent="."]
offset_left = 136.0
offset_top = 99.0
offset_right = 299.0
offset_bottom = 153.0
text = "Check Solution"

[node name="Label" type="Label" parent="."]
offset_left = -135.0
offset_top = -248.0
offset_right = 145.0
offset_bottom = -214.0
theme_type_variation = &"HeaderMedium"
text = "Schlüsselwort eingeben:"

[node name="Schlüsselwort" type="LineEdit" parent="."]
unique_name_in_owner = true
offset_left = 161.0
offset_top = -244.0
offset_right = 229.563
offset_bottom = -213.0

[node name="ApplyInner" type="Button" parent="."]
offset_left = 258.0
offset_top = -242.0
offset_right = 349.0
offset_bottom = -211.0
text = "Anwenden"

[node name="SceneSwitcherButton" parent="." instance=ExtResource("4_u5whh")]
offset_left = 245.0
offset_top = 223.0
offset_right = 255.0
offset_bottom = 231.0
text = "Inventar öffnen"
Text = "Inventar öffnen"
NextSceneString = "inventory"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
offset_left = 27.0
offset_top = -178.0
offset_right = 430.0
offset_bottom = -138.0
theme_override_constants/separation = 45

[node name="Keyword" parent="HBoxContainer2" instance=ExtResource("4_6int8")]
layout_mode = 2
text = "CAESAR"

[node name="Keyword2" parent="HBoxContainer2" instance=ExtResource("4_6int8")]
layout_mode = 2
text = "HACKER"

[node name="Keyword3" parent="HBoxContainer2" instance=ExtResource("4_6int8")]
layout_mode = 2
text = "BITCOIN"

[node name="Bella" parent="HBoxContainer2" instance=ExtResource("4_6int8")]
unique_name_in_owner = true
layout_mode = 2
text = "BELLA"

[connection signal="pressed" from="CheckSolution" to="." method="_on_check_solution_pressed"]
[connection signal="pressed" from="ApplyInner" to="." method="_on_apply_inner_pressed"]
[connection signal="clicked" from="HBoxContainer2/Keyword" to="." method="_on_keyword_clicked"]
[connection signal="clicked" from="HBoxContainer2/Keyword2" to="." method="_on_keyword_clicked"]
[connection signal="clicked" from="HBoxContainer2/Keyword3" to="." method="_on_keyword_clicked"]
[connection signal="clicked" from="HBoxContainer2/Bella" to="." method="_on_keyword_clicked"]
